# licencjat

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  todo.md
configs/: config_cartpole.yaml  config_minigrid_1.yaml  config_minigrid_1_test.yaml  config_minigrid_2.yaml
eda/: counting_experiments.ipynb
eda/data/: wandb_export_2025-08-30T10_12_53.648+02_00.csv
src/: agent_factory.py  buffer.py  config.py  env_factory.py  icm.py  launcher.py  model.py  ppo.py  train_baseline.py  utils.py
src/modules/: actor_critic.py  feature_extractors.py  icm.py  random_network_distillation.py
