[project]
name = "licencjat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "minigrid>=3.0.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchrl>=0.8.1",
    "torchvision>=0.22.1",
    "wandb>=0.21.0",
]

[[tool.uv.index]] 
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
