[project]
name = "licencjat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "box2d>=2.3.10",
    "box2d-py>=2.3.8",
    "colorlog>=6.9.0",
    "gymnasium",
    "minigrid>=3.0.0",
    "numpy>=2.1.2",
    "pandas>=2.3.1",
    "pygame>=2.6.1",
    "rllte-core>=1.0.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchrl>=0.8.1",
    "torchvision>=0.22.1",
    "tqdm>=4.66.5",
    "wandb>=0.21.0",
]

[[tool.uv.index]] 
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
